--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "program-team",
   "version": "0.1.0",
+  "proxy": "http://kapi-clientes.now.sh/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "formik": "^2.1.4",
+    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
