--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "program-team",
   "version": "0.1.0",
-  "proxy": "http://kapi-clientes.now.sh/",
+  "proxy": "https://kapi-clientes.now.sh/",
   "private": true,
-  "proxy": "https://kapi-productos.now.sh/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
